support of partially auto-generated ID for XADD